--- a/RakeDiagSearch/RakeDiagSearch/RakeDiagSearch.vcxproj
+++ b/RakeDiagSearch/RakeDiagSearch/RakeDiagSearch.vcxproj
@@ -74,7 +74,8 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\GitHub\boinc\lib;D:\GitHub\boinc\api;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../boinc/lib;../../../../boinc/api;$(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -82,6 +83,8 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <AdditionalIncludeDirectories>../../../../boinc/lib;../../../../boinc/api;$(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -91,7 +94,9 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\GitHub\boinc\lib;D:\GitHub\boinc\api;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../boinc/lib;../../../../boinc/api;$(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <DebugInformationFormat>None</DebugInformationFormat>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -106,10 +111,9 @@
       </FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\GitHub\boinc\lib;D:\GitHub\boinc\api</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../boinc/lib;../../../../boinc/api;$(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <DebugInformationFormat>
-      </DebugInformationFormat>
+      <DebugInformationFormat>None</DebugInformationFormat>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -128,10 +132,22 @@
     <ClCompile Include="Square.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\boinc\win_build\libboincapi_staticcrt_vs2013.vcxproj">
+    <Xml Include="app_info.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="boinc_api_howto.txt" />
+    <Text Include="x8_workunit.txt" />
+    <Text Include="x9_workunit.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile" />
+    <None Include="Makefile32" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\boinc\win_build\libboincapi_staticcrt_vs2013.vcxproj">
       <Project>{07bda8f7-4aaf-4a3b-b96e-ea72a143c5ae}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\boinc\win_build\libboinc_staticcrt_vs2013.vcxproj">
+    <ProjectReference Include="..\..\..\..\boinc\win_build\libboinc_staticcrt_vs2013.vcxproj">
       <Project>{b00664bd-71eb-46c1-957e-cd851418d395}</Project>
     </ProjectReference>
   </ItemGroup>
