Small WU; Attributes
Добавление "маленького WU", правка атрибутов.

--- a/RakeDiagSearch/RakeDiagSearch/RakeDiagSearch.vcxproj
+++ b/RakeDiagSearch/RakeDiagSearch/RakeDiagSearch.vcxproj
@@ -97,6 +97,8 @@
       <AdditionalIncludeDirectories>../../../../boinc/lib;../../../../boinc/api;$(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <DebugInformationFormat>None</DebugInformationFormat>
+      <AdditionalOptions>
+      </AdditionalOptions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
