--- a/RakeWuGenerator/RakeWuGenerator/RakeWuGenerator.vcxproj.filters
+++ b/RakeWuGenerator/RakeWuGenerator/RakeWuGenerator.vcxproj.filters
@@ -40,5 +40,8 @@
     <Text Include="x9_start_parameters.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="x9_small_workunit_start_parameters.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
