--- a/Square/Square/Square.vcxproj.filters
+++ b/Square/Square/Square.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="Square.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DLX_DLS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Square.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DLX_DLS.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
